# simple-opengl-project-template

./: .gitmodules  CMakeLists.txt  README.md
include/my_functions/: my_functions.hpp
src/: CMakeLists.txt  main.cpp
src/main/: CMakeLists.txt  main.cpp
src/my_functions/: CMakeLists.txt  my_functions.cpp
